# feral-processes

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.claude/: settings.json
assets/fonts/: LICENSE-dejavu  LICENSE-unscii
assets/items/: README.md  ablative_plating.ron  arc_lance.ron  bastion_lattice.ron  black_ice_pick.ron  core_fragment.ron  cortex_hack.ron  daemon_fang.ron  entropy_damper.ron  firewall_plating.ron  handshake_forge.ron  hardened_shell.ron  ice_breaker.ron  kernel_key.ron  kinetic_edge.ron  logic_probe.ron  monofilament_whip.ron  neural_amplifier.ron  null_weave.ron  oracle_core.ron  overclock_core.ron  packet_buffer.ron  phase_carapace.ron  plasma_router.ron  portal_fragment.ron  power_cell.ron  probe_daemon.ron  recursion_blade.ron  research_data.ron  scrap_ward.ron  shiv_routine.ron  siege_compiler.ron  singularity_matrix.ron  static_mesh.ron  sync_governor.ron  trace_sniffer.ron  wraithsteel_plate.ron
assets/research/: README.md  ablative.ron  armor_bench.ron  automation.ron  cold_storage.ron  commerce.ron  cortex.ron  firewall.ron  fortification.ron  monofilament.ron  neural_amp.ron  overclock.ron  power_grid.ron  weapon_bench.ron
assets/species/: README.md  cipher.ron  construct.ron  daemon.ron  drone.ron  ghost.ron  glitch.ron  overseer.ron  phantom.ron  rootkit.ron  scrapper.ron  sentinel.ron  sprite.ron  sub_process.ron  trojan.ron  virus.ron  (+3 more)
crates/gui/: Cargo.toml
crates/gui/src/: fx.rs  lib.rs  render.rs  sounds.rs  text.rs
crates/gui/tests/: font_rasterization.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs
(+58 files in other folders)
